--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 # MySQL properties
 db.driver = com.mysql.cj.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/spring_jpa_users?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
+db.url = jdbc:mysql://localhost:3306/users_DB
 db.username = root
 db.password = root
